// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FlashAlert /> Snaphot must match flashAlertDefault 1`] = `
<div
  className="p-4"
>
  <div
    className="flash"
  >
    Flash message goes here.
  </div>
</div>
`;

exports[`<FlashAlert /> Snaphot must match flashAlertMultipleParagraphs 1`] = `
<div
  className="p-4"
>
  <div
    className="flash"
  >
    <p>
      This is a longer flash message in it's own paragraph. It ends up looking something like this. If we keep adding more text, it'll eventually wrap to a new line.
    </p>
    <p>
      And this is another paragraph.
    </p>
  </div>
</div>
`;
